# frida-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TECHNICAL_DOC.md  build.rs  clippy.toml  release.bat  release.ps1  release_en.bat  release_v0.2.0.ps1  rustfmt.toml  文档.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/frida-agent/: Cargo.toml
crates/simple-injector/: Cargo.toml
examples/: hook_demo.rhai  hook_wechat_input.rhai
releases/: frida-rust-android-aarch64  frida-rust-linux-aarch64  frida-rust-linux-x86_64
src/: ai_learning.rs  esp_analyzer.rs  lib.rs  main.rs  webui.rs
src/android/: dex.rs  logcat.rs  mod.rs  process.rs
src/anti_detect/: env_clean.rs  fd_hide.rs  hide.rs  linker_hide.rs  maps_hide.rs  mod.rs  net_hide.rs  port_hide.rs  signature.rs  smart_stealth.rs  stack_fake.rs  thread_hide.rs  tracer.rs  win_hide.rs
src/common/: constants.rs  error.rs  mod.rs  syscall_wrapper.rs  types.rs  util.rs  win_util.rs
src/communication/: channel.rs  kernel_channel.rs  mod.rs  protocol.rs  server.rs  win_channel.rs
src/disasm/: disassembler.rs  mod.rs
src/hook/: ebpf_hook.rs  got_plt.rs  hw_breakpoint.rs  iat_hook.rs  inline.rs  java_hook.rs  manager.rs  mod.rs
src/inject/: agent.rs  injector.rs  mod.rs  process.rs  ptrace_inject.rs  reflect_inject.rs  win_inject.rs  win_process.rs  zygote_inject.rs
src/mcp/: handler.rs  mod.rs
src/memory/: allocator.rs  elf_parser.rs  mod.rs  pe_parser.rs  scanner.rs  win_allocator.rs  win_scanner.rs
src/script/: engine.rs  host_context.rs  loader.rs  mod.rs
(+2 files in other folders)
