[package]
name = "frida-rust"
version = "0.2.0"
edition = "2021"
description = "Frida 核心功能的 Rust 实现 - 动态插桩与逆向工程框架"
license = "MIT"
authors = ["Frida-Rust Contributors"]

[lib]
name = "frida_rust"
path = "src/lib.rs"

[[bin]]
name = "frida-rust"
path = "src/main.rs"

[dependencies]
rhai = "1.19"
libc = "0.2"
goblin = "0.9"
elf = "0.7"
byteorder = "1.5"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

target-lexicon = "0.12"

# MCP
rmcp = { version = "2.2.0", features = ["server", "transport-io", "macros", "schemars"] }
schemars = { version = "1.2.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket", "fs", "mman"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "handleapi", "libloaderapi", "tlhelp32", "psapi", "winbase", "winnt", "synchapi", "namedpipeapi", "fileapi", "errhandlingapi", "sysinfoapi", "wow64apiset", "debugapi", "threadpoollegacyapiset"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
